clase 3/ estructuras basicas+ etiquetas html

--- a/clase2/Index.html
+++ b/clase2/Index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <!-- para comentario-->
-    <h1> Titulo   </h1>
-    <h2> sub titulo </h2>
-    <h3>sub titulo</h3>
+    <h1> SUBIR CONTENIDO A GIT   </h1>
+    <h2> GIT ADD </h2>
+    <h3> GIT COMMIT -M"UN COMENTARIO"</h3>
+    <h4> GIT PUSH</h4>
+    <h5></h5>
     
 </body>
 </html>
